--- a/client/index.html
+++ b/client/index.html
@@ -8,15 +8,18 @@
   <body>
 
     <!-- TODO: Make it pretty! -->
-    <h1>Random Quote Generator</h1>
+    <div class="container">
+      <h1>Random Quote Generator</h1>
 
-    <h2 id="quote"></h2>
-    <form>
-      <input type="text">
-      <button id="submit">Submit</button>
-      <p id="response"></p>
-    </form>
+      <h2 id="quote"></h2>
 
+      <form>
+        <input type="text">
+        <button id="submit">Submit</button>
+        <p id="response"></p>
+      </form>
+
+    </div> <!-- container -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
